--- a/things-resource-format-selector.html
+++ b/things-resource-format-selector.html
@@ -1,12 +1,12 @@
 <!--
 @license
-Copyright © HatioLab Inc. All rights reserved.
+Copyright © 2015-2021 Shenzhen Weixun All rights reserved.
 -->
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-icon/iron-icon.html">
-<link rel="import" href="../paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../polymer/polymer.html" />
+<link rel="import" href="../iron-icon/iron-icon.html" />
+<link rel="import" href="../paper-icon-button/paper-icon-button.html" />
 
-<link rel="import" href="./things-resource-selector-behavior.html">
+<link rel="import" href="./things-resource-selector-behavior.html" />
 
 <!--
   Name Based Resource Selector
@@ -15,34 +15,35 @@ Copyright © HatioLab Inc. All rights reserved.
 <dom-module id="things-resource-format-selector">
   <style>
     label {
-      @apply(--things-label);
+      @apply (--things-label);
     }
     input {
-      @apply(--things-input);
-      width:calc(65% - 37px);
+      @apply (--things-input);
+      width: calc(65% - 37px);
     }
     paper-icon-button {
-      @apply(--things-small-icon);
-      margin-right:7px;margin-left:-27px;
-      opacity:.4;
-      position:relative;
-      top:-2px;
+      @apply (--things-small-icon);
+      margin-right: 7px;
+      margin-left: -27px;
+      opacity: 0.4;
+      position: relative;
+      top: -2px;
     }
     iron-icon {
-      @apply(--things-picker-button);
-      background:url(/images/icon-resource-select.png) 50% 3px no-repeat var(--paper-blue-grey-300);
+      @apply (--things-picker-button);
+      background: url(/images/icon-resource-select.png) 50% 3px no-repeat var(--paper-blue-grey-300);
     }
-    paper-icon-button[readonly]{
-        opacity:0.1;
+    paper-icon-button[readonly] {
+      opacity: 0.1;
     }
-    iron-icon[readonly]{
-        opacity:0.4;
+    iron-icon[readonly] {
+      opacity: 0.4;
     }
   </style>
 
   <template>
     <label>[[label]]</label>
-    <input is="iron-input" name="[[name]]" bind-value="[[value]]" readonly disabled$="[[readonly]]">
+    <input is="iron-input" name="[[name]]" bind-value="[[value]]" readonly disabled$="[[readonly]]" />
     <paper-icon-button readonly$="[[readonly]]" suffix on-tap="clearValue" icon="clear" alt="clear" title="clear">
     </paper-icon-button>
     <iron-icon readonly$="[[readonly]]" prefix on-tap="openResourceSelector"></iron-icon>
@@ -50,7 +51,6 @@ Copyright © HatioLab Inc. All rights reserved.
 
   <script type="text/javascript">
     Polymer({
-
       is: "things-resource-format-selector",
 
       properties: {
@@ -59,8 +59,8 @@ Copyright © HatioLab Inc. All rights reserved.
          * *******
          * @type {String}
          */
-        name : {
-          type: String
+        name: {
+          type: String,
         },
 
         /**
@@ -70,8 +70,8 @@ Copyright © HatioLab Inc. All rights reserved.
          */
         objValue: {
           type: Object,
-          notify:true,
-          observer: '_objValueChanged'
+          notify: true,
+          observer: "_objValueChanged",
         },
 
         /**
@@ -80,7 +80,7 @@ Copyright © HatioLab Inc. All rights reserved.
          * @type {String}
          */
         label: {
-          type: String
+          type: String,
         },
 
         /**
@@ -89,19 +89,19 @@ Copyright © HatioLab Inc. All rights reserved.
          * @type {String}
          */
         value: {
-          type: String
+          type: String,
         },
 
         /**
-        * Resource Type - Entity or Menu
-        * 1) Entity : Entity 설정에 의한 Selector 화면 구성
-        * 2) Menu : Menu 설정에 의한 Selector 화면 구성
-        * *******
-        * @type {String}
-        */
+         * Resource Type - Entity or Menu
+         * 1) Entity : Entity 설정에 의한 Selector 화면 구성
+         * 2) Menu : Menu 설정에 의한 Selector 화면 구성
+         * *******
+         * @type {String}
+         */
         resourceType: {
           type: String,
-          value: 'Entity'
+          value: "Entity",
         },
 
         /**
@@ -111,7 +111,7 @@ Copyright © HatioLab Inc. All rights reserved.
          * @type {String}
          */
         resourceName: {
-          type: String
+          type: String,
         },
 
         /**
@@ -121,7 +121,7 @@ Copyright © HatioLab Inc. All rights reserved.
          * @type {String}
          */
         initialParams: {
-          type: String
+          type: String,
         },
 
         /**
@@ -130,7 +130,7 @@ Copyright © HatioLab Inc. All rights reserved.
          * @type {String}
          */
         bindFields: {
-          type: String
+          type: String,
         },
 
         /**
@@ -140,25 +140,23 @@ Copyright © HatioLab Inc. All rights reserved.
          */
         valueField: {
           type: String,
-          value: 'name'
+          value: "name",
         },
         readonly: {
-            type: Boolean,
-            value: false
-        }
+          type: Boolean,
+          value: false,
+        },
       },
 
-      behaviors: [
-        Things.ResourceSelectorBehavior
-      ],
+      behaviors: [Things.ResourceSelectorBehavior],
 
       /**
        * Object 값이 변경될 경우
        * *******
        * @param {Object} objValue
        */
-      _objValueChanged: function(objValue) {
-        if(objValue) {
+      _objValueChanged: function (objValue) {
+        if (objValue) {
           this.value = objValue[this.valueField];
         } else {
           this.value = null;
@@ -170,7 +168,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * *******
        * @return {Object} objValue
        */
-      getObjValue: function() {
+      getObjValue: function () {
         return this.objValue;
       },
 
@@ -179,7 +177,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * *******
        * @param {Object} objValue
        */
-      setObjValue: function(objValue) {
+      setObjValue: function (objValue) {
         this.objValue = objValue;
       },
 
@@ -187,9 +185,9 @@ Copyright © HatioLab Inc. All rights reserved.
        * Open Resource Selector
        * *********
        */
-      openResourceSelector: function() {
-        if(this.readonly){
-            return ;
+      openResourceSelector: function () {
+        if (this.readonly) {
+          return;
         }
         var form = this.findOwnerForm(this);
         this.openResourceSelectorByForm(this, true, form);
@@ -200,13 +198,15 @@ Copyright © HatioLab Inc. All rights reserved.
        * *******
        * @param {Object} element
        */
-      findOwnerForm: function(element) {
-        if(!element.parentElement) {
+      findOwnerForm: function (element) {
+        if (!element.parentElement) {
           return null;
         } else {
-          if(element.parentElement.localName == 'form' ||
-             element.parentElement.localName == 'things-form' ||
-             element.parentElement.localName == 'things-search-form') {
+          if (
+            element.parentElement.localName == "form" ||
+            element.parentElement.localName == "things-form" ||
+            element.parentElement.localName == "things-search-form"
+          ) {
             return element.parentElement;
           } else {
             return this.findOwnerForm(element.parentElement);
@@ -218,12 +218,12 @@ Copyright © HatioLab Inc. All rights reserved.
        * 값을 리셋
        * ******
        */
-      clearValue: function() {
-        if(this.readonly){
-            return ;
+      clearValue: function () {
+        if (this.readonly) {
+          return;
         }
         this.objValue = null;
-      }
+      },
     });
   </script>
 </dom-module>
