--- a/demo/demo-resource-selector.html
+++ b/demo/demo-resource-selector.html
@@ -1,97 +1,92 @@
 <!--
 @license
-Copyright © HatioLab Inc. All rights reserved.
+Copyright © 2015-2021 Shenzhen Weixun All rights reserved.
 -->
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes" />
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+    <title>things-resource-selector demo</title>
 
-  <title>things-resource-selector demo</title>
+    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="import" href="../../polymer/polymer.html" />
+    <link rel="import" href="../../paper-input/paper-input.html" />
+    <link rel="import" href="../../paper-styles/color.html" />
+    <link rel="import" href="../../paper-styles/demo-pages.html" />
+    <link rel="import" href="../../paper-toast/paper-toast.html" />
 
-    <link rel="import" href="../../polymer/polymer.html">
-  <link rel="import" href="../../paper-input/paper-input.html">
-  <link rel="import" href="../../paper-styles/color.html">
-  <link rel="import" href="../../paper-styles/demo-pages.html">
-  <link rel="import" href="../../paper-toast/paper-toast.html">
+    <link rel="import" href="../../things-ajax/things-ajax.html" />
+    <link rel="import" href="../../things-button/things-button.html" />
+    <link rel="import" href="../../things-spinner/things-spinner.html" />
+    <link rel="import" href="../../things-setting/things-setting.html" />
 
-    <link rel="import" href="../../things-ajax/things-ajax.html">
-  <link rel="import" href="../../things-button/things-button.html">
-  <link rel="import" href="../../things-spinner/things-spinner.html">
-  <link rel="import" href="../../things-setting/things-setting.html">
+    <link rel="import" href="../things-resource-selector.html" />
+    <link rel="import" href="../things-selector-content.html" />
 
-  <link rel="import" href="../things-resource-selector.html">
-  <link rel="import" href="../things-selector-content.html">
+    <link rel="stylesheet" href="../../paper-styles/demo.css" />
 
-  <link rel="stylesheet" href="../../paper-styles/demo.css">
+    <style is="custom-style">
+      .output {
+        margin-top: 20px;
+        word-wrap: break-word;
+        @apply (--paper-font-common-code);
+      }
+      form > paper-button {
+        width: 45%;
+        margin-top: 20px;
+      }
+      form > paper-button:not([disabled]) {
+        background: var(--paper-light-blue-500);
+        color: white;
+      }
+      button {
+        margin-top: 20px;
+      }
+      paper-spinner {
+        width: 14px;
+        height: 14px;
+        margin-right: 20px;
+      }
+      paper-dropdown-menu {
+        display: block;
+      }
+      demo-snippet {
+        --demo-snippet-code: {
+          max-height: 300px;
+        }
+      }
+    </style>
+  </head>
+  <body unresolved>
+    <dom-module id="sample-resource-selector">
+      <template>
+        <things-resource-selector
+          id="resource-selector"
+          label="Label"
+          name="diy_form_id"
+          resource-type="DiyForm"
+          resource-url="diy_forms"
+          delegate-column="name"
+        >
+        </things-resource-selector>
+      </template>
 
-  <style is="custom-style">
+      <script>
+        Polymer({
+          is: "sample-resource-selector",
+        });
+      </script>
+    </dom-module>
 
-    .output {
-      margin-top: 20px;
-      word-wrap: break-word;
-      @apply(--paper-font-common-code);
-    }
-    form > paper-button {
-      width: 45%;
-      margin-top: 20px;
-    }
-    form > paper-button:not([disabled]) {
-      background: var(--paper-light-blue-500);
-      color: white;
-    }
-    button {
-      margin-top: 20px;
-    }
-    paper-spinner {
-      width: 14px;
-      height: 14px;
-      margin-right: 20px;
-    }
-    paper-dropdown-menu {
-      display: block;
-    }
-    demo-snippet {
-      --demo-snippet-code: {
-        max-height: 300px;
-      };
-    }
-
-  </style>
-
-</head>
-<body unresolved>
-
-  <dom-module id="sample-resource-selector">
-    <template>
-      <things-resource-selector 
-        id="resource-selector" 
-        label="Label" 
-        name="diy_form_id"
-        resource-type="DiyForm" 
-        resource-url="diy_forms"
-        delegate-column="name">
-      </things-resource-selector>
+    <template is="dom-bind" id="app">
+      <section>
+        <h4>Things Resource Selector</h4>
+        <sample-resource-selector></sample-resource-selector>
+      </section>
     </template>
-
-    <script>
-      Polymer({
-        is: "sample-resource-selector"
-      });
-    </script>
-  </dom-module>
-
-  <template is="dom-bind" id="app">
-    <section>
-      <h4>Things Resource Selector</h4>
-      <sample-resource-selector></sample-resource-selector>
-    </section>    
-  </template>
-
-</body>
+  </body>
 </html>
