--- a/things-resource-reference-query.html
+++ b/things-resource-reference-query.html
@@ -1,3 +1,7 @@
+<!--
+@license
+Copyright © 2015-2021 Shenzhen Weixun All rights reserved.
+-->
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
