--- a/things-selector-content.html
+++ b/things-selector-content.html
@@ -1,16 +1,16 @@
 <!--
 @license
-Copyright © HatioLab Inc. All rights reserved.
+Copyright © 2015-2021 Shenzhen Weixun All rights reserved.
 -->
-<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../polymer/polymer.html" />
 
-<link rel="import" href="../things-ajax/things-ajax.html">
-<link rel="import" href="../things-button/things-button.html">
-<link rel="import" href="../things-full-dialog/things-full-dialog.html">
-<link rel="import" href="../things-grid/things-basic-grid.html">
-<link rel="import" href="../things-meta/things-named-meta-behavior.html">
+<link rel="import" href="../things-ajax/things-ajax.html" />
+<link rel="import" href="../things-button/things-button.html" />
+<link rel="import" href="../things-full-dialog/things-full-dialog.html" />
+<link rel="import" href="../things-grid/things-basic-grid.html" />
+<link rel="import" href="../things-meta/things-named-meta-behavior.html" />
 
-<link rel="import" href="things-selector-form.html">
+<link rel="import" href="things-selector-form.html" />
 
 <!--
 하나의 리소스에 대한 기본 액션 (List, Create, Find, Upate, Delete) 및 Import, Export 등의 기능을 제공하는 화면 셋
@@ -30,214 +30,205 @@ Things Reource Content는 검색 폼, 그리드가 기본으로 표시되고 그
 -->
 
 <dom-module id="things-selector-content">
-	<template>
-		<style>
-			:host {
-				display: block;
-				@apply(--layout-vertical);
-				@apply(--layout-flex);
-			}
+  <template>
+    <style>
+      :host {
+        display: block;
+        @apply (--layout-vertical);
+        @apply (--layout-flex);
+      }
 
-			things-resource-grid {
-				@apply(--layout-flex);
-			}
-		</style>
+      things-resource-grid {
+        @apply (--layout-flex);
+      }
+    </style>
 
-		<div class="layout vertical flex">
-			<things-ajax
-				auto
-				id="resource-meta"
-				method="GET"
-				resource-url="[[menuMetaUrl]]"
-				last-response="{{metaData}}">
-			</things-ajax>
+    <div class="layout vertical flex">
+      <things-ajax auto id="resource-meta" method="GET" resource-url="[[menuMetaUrl]]" last-response="{{metaData}}">
+      </things-ajax>
 
-			<things-selector-form
-				id="search-form"
-				form-fields="[[searchFormFields]]"
-				select-fields="[[selectFields]]"
-				sort-fields="[[sortFields]]"
-				action-url="[[menuInfo.resource_url]]"
-				page="{{page}}"
-				limit="[[limit]]"
-				last-response="{{lastResponse}}">
-			</things-selector-form>
+      <things-selector-form
+        id="search-form"
+        form-fields="[[searchFormFields]]"
+        select-fields="[[selectFields]]"
+        sort-fields="[[sortFields]]"
+        action-url="[[menuInfo.resource_url]]"
+        page="{{page}}"
+        limit="[[limit]]"
+        last-response="{{lastResponse}}"
+      >
+      </things-selector-form>
 
-			<things-resource-grid
-				id="grid"
-				model="[[gridModel]]"
-				columns="[[gridColumns]]"
-				config="[[gridConfig]]"
-				buttons="[[buttons]]"
-				current-page="{{page}}"
-				limit="{{limit}}"
-				data="[[items]]"
-				total-count="[[itemCount]]">
-			</things-resource-grid>
-		</div>
-	</template>
+      <things-resource-grid
+        id="grid"
+        model="[[gridModel]]"
+        columns="[[gridColumns]]"
+        config="[[gridConfig]]"
+        buttons="[[buttons]]"
+        current-page="{{page}}"
+        limit="{{limit}}"
+        data="[[items]]"
+        total-count="[[itemCount]]"
+      >
+      </things-resource-grid>
+    </div>
+  </template>
 
-	<script>
-		Polymer({
-			is: 'things-selector-content',
+  <script>
+    Polymer({
+      is: "things-selector-content",
 
-			behaviors: [
-				Things.NamedMetaBehavior
-			],
+      behaviors: [Things.NamedMetaBehavior],
 
-			properties: {
-				/**
-				 * Screen layout
-				 * ******
-				 * @type {String}
-				 */
-				layout: {
-					type: String
-				},
+      properties: {
+        /**
+         * Screen layout
+         * ******
+         * @type {String}
+         */
+        layout: {
+          type: String,
+        },
 
-				/**
-				 * Resource Selector 타이틀
-				 * ******
-				 * @type {String}
-				 */
-				title: {
-					type: String,
-				},
+        /**
+         * Resource Selector 타이틀
+         * ******
+         * @type {String}
+         */
+        title: {
+          type: String,
+        },
 
-				/**
-				 * 버튼
-				 * ******
-				 * @type {Array}
-				 */
-				buttons: {
-					type: Array,
-					value: []
-				},
+        /**
+         * 버튼
+         * ******
+         * @type {Array}
+         */
+        buttons: {
+          type: Array,
+          value: [],
+        },
 
-				/**
-				 * 조회 결과
-				 * ******
-				 * @type {Object}
-				 */
-				lastResponse: {
-					type: Object,
-					observer: '_responseChanged'
-				},
+        /**
+         * 조회 결과
+         * ******
+         * @type {Object}
+         */
+        lastResponse: {
+          type: Object,
+          observer: "_responseChanged",
+        },
 
-				/**
-				 * 조회 결과 리스트 데이터 프로퍼티 명
-				 * ******
-				 * @type {String}
-				 */
-				itemsProp: {
-					type: String,
-					value: 'items'
-				},
+        /**
+         * 조회 결과 리스트 데이터 프로퍼티 명
+         * ******
+         * @type {String}
+         */
+        itemsProp: {
+          type: String,
+          value: "items",
+        },
 
-				/**
-				 * 조회 결과 리스트 Total Count 프로퍼티 명
-				 * ******
-				 * @type {String}
-				 */
-				totalProp: {
-					type: String,
-					value: 'total'
-				},
+        /**
+         * 조회 결과 리스트 Total Count 프로퍼티 명
+         * ******
+         * @type {String}
+         */
+        totalProp: {
+          type: String,
+          value: "total",
+        },
 
-				/**
-				 * 조회 결과 리스트 데이터
-				 * ******
-				 * @type {Array}
-				 */
-				items: {
-					type: Array
-				},
+        /**
+         * 조회 결과 리스트 데이터
+         * ******
+         * @type {Array}
+         */
+        items: {
+          type: Array,
+        },
 
-				/**
-				 * 조회 결과 레코드 수
-				 * ******
-				 * @type {Number}
-				 */
-				itemCount: {
-					type: Number
-				}
-			},
+        /**
+         * 조회 결과 레코드 수
+         * ******
+         * @type {Number}
+         */
+        itemCount: {
+          type: Number,
+        },
+      },
 
-			listeners : {
-				'grid.things-grid-configured' : 'refreshGridData'
-			},
+      listeners: {
+        "grid.things-grid-configured": "refreshGridData",
+      },
 
-			observers: [
-				'_menuInfoChanged(menuInfo)'
-			],
+      observers: ["_menuInfoChanged(menuInfo)"],
 
-			/**
-			 * 메뉴 메타데이터 변경시
-			 *********
-			 * @param {Object} menuInfo
-			 */
-			_menuInfoChanged: function(menuInfo) {
-				if(menuInfo) {
-					this.title = menuInfo.title;
-					this.$.grid.paginatable = menuInfo.pagination;
-					this.itemsProp = menuInfo.items_prop;
-					this.totalProp = menuInfo.total_prop;
-					var searchForm = this.$['search-form'];
+      /**
+       * 메뉴 메타데이터 변경시
+       *********
+       * @param {Object} menuInfo
+       */
+      _menuInfoChanged: function (menuInfo) {
+        if (menuInfo) {
+          this.title = menuInfo.title;
+          this.$.grid.paginatable = menuInfo.pagination;
+          this.itemsProp = menuInfo.items_prop;
+          this.totalProp = menuInfo.total_prop;
+          var searchForm = this.$["search-form"];
 
-					if(menuInfo.resource_type == 'ENTITY') {
-						searchForm.paramType = 'RESOURCE';
+          if (menuInfo.resource_type == "ENTITY") {
+            searchForm.paramType = "RESOURCE";
+          } else if (menuInfo.resource_type == "DIY_SERVICE") {
+            searchForm.paramType = "DIY";
+          }
+        }
+      },
 
-					} else if(menuInfo.resource_type == 'DIY_SERVICE') {
-						searchForm.paramType = 'DIY';
-					}
-				}
-			},
+      /**
+       * ID Field를 리턴한다.
+       * *********
+       * @return {String} id값으로 사용할 필드명
+       */
+      getIdField: function () {
+        return this.menuInfo && this.menuInfo.id_field ? this.menuInfo.id_field : "id";
+      },
 
-			/**
-			 * ID Field를 리턴한다.
-			 * *********
-			 * @return {String} id값으로 사용할 필드명
-			 */
-			getIdField: function() {
-				return (this.menuInfo && this.menuInfo.id_field) ? this.menuInfo.id_field : 'id';
-			},
+      /**
+       * Title Field를 리턴한다.
+       * ********
+       * @return {String} title값으로 사용할 필드명
+       */
+      getTitleField: function () {
+        return this.menuInfo && this.menuInfo.title_field ? this.menuInfo.title_field : "name";
+      },
 
-			/**
-			 * Title Field를 리턴한다.
-			 * ********
-			 * @return {String} title값으로 사용할 필드명
-			 */
-			getTitleField: function() {
-				return (this.menuInfo && this.menuInfo.title_field) ? this.menuInfo.title_field : 'name';
-			},
+      /**
+       * 조회 데이터 변경시
+       * ********
+       * @param {Object} lastResponse
+       */
+      _responseChanged: function (lastResponse) {
+        this.items = lastResponse[this.itemsProp] ? lastResponse[this.itemsProp] : lastResponse;
+        this.itemCount = lastResponse[this.totalProp] ? lastResponse[this.totalProp] : lastResponse.length;
+      },
 
-			/**
-			 * 조회 데이터 변경시
-			 * ********
-			 * @param {Object} lastResponse
-			 */
-			_responseChanged: function(lastResponse) {
-				this.items = lastResponse[this.itemsProp] ? lastResponse[this.itemsProp] : lastResponse;
-				this.itemCount = lastResponse[this.totalProp] ? lastResponse[this.totalProp] : lastResponse.length;
-			},
+      /**
+       * reload grid data
+       * 결국 서치 폼에서 다시 검색한다.
+       * *******
+       * @param {Object} grid
+       */
+      refreshGridData: function (grid) {
+        this.$["search-form"].submitMyForm();
+      },
 
-			/**
-			 * reload grid data
-			 * 결국 서치 폼에서 다시 검색한다.
-			 * *******
-			 * @param {Object} grid
-			 */
-			refreshGridData: function(grid) {
-				this.$['search-form'].submitMyForm();
-			},
-
-			/**
-			 * 화면 초기화 함수
-			 * 메타 데이터를 서버로 요청하여 화면을 구성한다.
-			 * *******
-			 */
-			initializeContent: function() {
-			}
-		});
-	</script>
+      /**
+       * 화면 초기화 함수
+       * 메타 데이터를 서버로 요청하여 화면을 구성한다.
+       * *******
+       */
+      initializeContent: function () {},
+    });
+  </script>
 </dom-module>
