--- a/things-selector-form.html
+++ b/things-selector-form.html
@@ -1,30 +1,30 @@
 <!--
 @license
-Copyright © HatioLab Inc. All rights reserved.
+Copyright © 2015-2021 Shenzhen Weixun All rights reserved.
 -->
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-input/iron-input.html">
-<link rel="import" href="../iron-form/iron-form.html">
-<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../paper-button/paper-button.html">
-<link rel="import" href="../paper-checkbox/paper-checkbox.html">
-<link rel="import" href="../paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="../paper-input/paper-input.html">
-<link rel="import" href="../paper-input/paper-textarea.html">
-<link rel="import" href="../paper-material/paper-material.html">
-<link rel="import" href="../paper-radio-group/paper-radio-group.html">
-<link rel="import" href="../paper-radio-button/paper-radio-button.html">
-<link rel="import" href="../paper-toolbar/paper-toolbar.html">
-<link rel="import" href="../paper-tooltip/paper-tooltip.html">
+<link rel="import" href="../polymer/polymer.html" />
+<link rel="import" href="../iron-input/iron-input.html" />
+<link rel="import" href="../iron-form/iron-form.html" />
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html" />
+<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html" />
+<link rel="import" href="../paper-button/paper-button.html" />
+<link rel="import" href="../paper-checkbox/paper-checkbox.html" />
+<link rel="import" href="../paper-dropdown-menu/paper-dropdown-menu.html" />
+<link rel="import" href="../paper-input/paper-input.html" />
+<link rel="import" href="../paper-input/paper-textarea.html" />
+<link rel="import" href="../paper-material/paper-material.html" />
+<link rel="import" href="../paper-radio-group/paper-radio-group.html" />
+<link rel="import" href="../paper-radio-button/paper-radio-button.html" />
+<link rel="import" href="../paper-toolbar/paper-toolbar.html" />
+<link rel="import" href="../paper-tooltip/paper-tooltip.html" />
 
-<link rel="import" href="../things-button/things-button.html">
-<link rel="import" href="../things-fullscreen/things-fullscreen-behavior.html">
-<link rel="import" href="../things-msg-box-behavior/things-msg-box-behavior.html">
-<link rel="import" href="../things-spinner/things-spinner-behavior.html">
+<link rel="import" href="../things-button/things-button.html" />
+<link rel="import" href="../things-fullscreen/things-fullscreen-behavior.html" />
+<link rel="import" href="../things-msg-box-behavior/things-msg-box-behavior.html" />
+<link rel="import" href="../things-spinner/things-spinner-behavior.html" />
 
-<link rel="import" href="./things-selector-form-behavior.html">
-<link rel="import" href="./things-selector-form-search-behavior.html">
+<link rel="import" href="./things-selector-form-behavior.html" />
+<link rel="import" href="./things-selector-form-search-behavior.html" />
 
 <!--
 `<things-search-form>` is an HTML `<form>` element that can search data by configure form fields dinamically.
@@ -54,31 +54,32 @@ Copyright © HatioLab Inc. All rights reserved.
 
 <dom-module id="things-selector-form">
   <template>
-    <style is="custom-style" include="iron-flex iron-flex-alignment">
-    </style>
+    <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
 
     <style>
       :host {
         display: block;
-        background-color:var(--things-lightgrey-background-color);
+        background-color: var(--things-lightgrey-background-color);
       }
-      form{
-        @apply(--things-default-padding);
-        padding-bottom:0;
-        border-bottom:1px solid rgba(0,0,0,.1);
+      form {
+        @apply (--things-default-padding);
+        padding-bottom: 0;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
       }
-      paper-fab{
-        @apply(--things-search-fab);
+      paper-fab {
+        @apply (--things-search-fab);
       }
     </style>
 
     <paper-material elevation="0" class="flex" on-keypress="handleKeyPress">
-      <form is="iron-form"
-            action="[[action]]"
-            method="GET"
-            content-type="[[contentType]]"
-            last-response ="{{lastResponse}}"
-            with-credentials="[[withCredentials]]">
+      <form
+        is="iron-form"
+        action="[[action]]"
+        method="GET"
+        content-type="[[contentType]]"
+        last-response="{{lastResponse}}"
+        with-credentials="[[withCredentials]]"
+      >
         <div id="fields" class="layout vertical flex"></div>
         <paper-fab icon="search" title="search" on-tap="_onSearchFormTap"></paper-fab>
       </form>
@@ -87,27 +88,27 @@ Copyright © HatioLab Inc. All rights reserved.
 
   <script>
     Polymer({
-      is: 'things-selector-form',
+      is: "things-selector-form",
 
       behaviors: [
         Things.SelectorFormBehavior,
         Things.SelectorFormSearchBehavior,
         Things.FullscreenBehavior,
         Things.SpinnerBehavior,
-        Things.MsgBoxBehavior
+        Things.MsgBoxBehavior,
       ],
 
-      listeners : {
-        'iron-form-presubmit' :'handleBeforeSubmit',
-        'iron-form-response' :'_successResponseHandler',
-        'iron-form-error' : '_errorResponseHandler'
+      listeners: {
+        "iron-form-presubmit": "handleBeforeSubmit",
+        "iron-form-response": "_successResponseHandler",
+        "iron-form-error": "_errorResponseHandler",
       },
 
       /**
        * 리소스 폼이 이미 구성되었는지 여부
        * ********
        */
-      isFormConfigured: function() {
+      isFormConfigured: function () {
         return this.$.fields.childNodes.length > 0;
       },
 
@@ -115,32 +116,37 @@ Copyright © HatioLab Inc. All rights reserved.
        * 검색 폼 화면을 구성. formFields 정보로 동적으로 폼 하위 엘리먼트를 생성하여 폼을 구성한다.
        * ********
        */
-      reconfigureMyForm: function() {
-        if(!this.formFields || this.formFields.length <= 0 || this.isFormConfigured()) return;
-        var divContainer = this.$.fields, rowDiv = null;
+      reconfigureMyForm: function () {
+        if (!this.formFields || this.formFields.length <= 0 || this.isFormConfigured()) return;
+        var divContainer = this.$.fields,
+          rowDiv = null;
 
-        for(index in this.formFields) {
+        for (index in this.formFields) {
           var field = this.formFields[index];
-          if(field.type == 'hidden') continue;
+          if (field.type == "hidden") continue;
 
           field.searchForm = true;
           var newElement = this._createFormElement(field);
-          if(!newElement) continue;
+          if (!newElement) continue;
 
-          if(field.type == 'date-from-to-picker') {
+          if (field.type == "date-from-to-picker") {
             // 1. 이전 div가 1개이고 date-from-to 가 아니면 empty 열 추가
-            if(rowDiv && rowDiv.childNodes && (rowDiv.childNodes.length % 2 != 0) && rowDiv.childNodes[0].localName.indexOf('things-date-from-to') < 0) {
-              rowDiv.appendChild(this._createFormElement({ type: 'empty' }));
+            if (
+              rowDiv &&
+              rowDiv.childNodes &&
+              rowDiv.childNodes.length % 2 != 0 &&
+              rowDiv.childNodes[0].localName.indexOf("things-date-from-to") < 0
+            ) {
+              rowDiv.appendChild(this._createFormElement({ type: "empty" }));
             }
 
             rowDiv = this._createElementContainer(divContainer, newElement);
-
           } else {
-            if(rowDiv == null || !rowDiv.childNodes || (rowDiv.childNodes.length % 2 == 0)) {
+            if (rowDiv == null || !rowDiv.childNodes || rowDiv.childNodes.length % 2 == 0) {
               rowDiv = this._createElementContainer(divContainer, newElement);
             } else {
               // rowDiv의 마지막 엘리먼트가 textarea 이면 rowDiv에 empty 엘리먼트 추가
-              if(rowDiv.childNodes[0].localName.indexOf('things-date-from-to') >= 0) {
+              if (rowDiv.childNodes[0].localName.indexOf("things-date-from-to") >= 0) {
                 rowDiv = this._createElementContainer(divContainer, newElement);
               } else {
                 rowDiv.appendChild(newElement);
@@ -150,23 +156,26 @@ Copyright © HatioLab Inc. All rights reserved.
         }
 
         // 마지막 Div가 홀수이고 textarea가 아니면 empty 열 추가
-        if(rowDiv && rowDiv.childNodes && rowDiv.childNodes.length == 1) {
-          if(rowDiv.childNodes[0].localName.indexOf('textarea') < 0 && rowDiv.childNodes[0].localName.indexOf('things-date-from-to') < 0) {
-            var emptyElement = this._createFormElement({ type: 'empty' });
+        if (rowDiv && rowDiv.childNodes && rowDiv.childNodes.length == 1) {
+          if (
+            rowDiv.childNodes[0].localName.indexOf("textarea") < 0 &&
+            rowDiv.childNodes[0].localName.indexOf("things-date-from-to") < 0
+          ) {
+            var emptyElement = this._createFormElement({ type: "empty" });
             rowDiv.appendChild(emptyElement);
           }
         }
 
-        for(index in this.formFields) {
+        for (index in this.formFields) {
           var field = this.formFields[index];
-          if(field.type != 'hidden') continue;
+          if (field.type != "hidden") continue;
           var newElement = this._createFormElement(field);
           rowDiv = this._createElementContainer(divContainer, newElement);
           rowDiv.hidden = true;
         }
 
         this.active = true;
-        this.fire('things-search-form-configured', this.formFields);
+        this.fire("things-search-form-configured", this.formFields);
       },
 
       /**
@@ -175,10 +184,10 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} divContainer
        * @param {Object} childElement
        */
-      _createElementContainer: function(divContainer, childElement) {
-        rowDiv = document.createElement('div');
-        rowDiv.setAttribute('class', 'layout horizontal');
-        if(childElement) rowDiv.appendChild(childElement);
+      _createElementContainer: function (divContainer, childElement) {
+        rowDiv = document.createElement("div");
+        rowDiv.setAttribute("class", "layout horizontal");
+        if (childElement) rowDiv.appendChild(childElement);
         divContainer.appendChild(rowDiv);
         return rowDiv;
       },
@@ -188,15 +197,15 @@ Copyright © HatioLab Inc. All rights reserved.
        * *******
        * @return {Array} form elements
        */
-      getFormElements: function() {
+      getFormElements: function () {
         var formElements = [];
         var allDivs = this.$.fields.childNodes;
-        if(!allDivs || allDivs.length == 0) return [];
+        if (!allDivs || allDivs.length == 0) return [];
 
-        for(var i = 0 ; i < allDivs.length; i++) {
+        for (var i = 0; i < allDivs.length; i++) {
           var divContainer = allDivs[i];
           var divElements = divContainer.childNodes ? divContainer.childNodes : [];
-          for(var j = 0 ; j < divElements.length ; j++) {
+          for (var j = 0; j < divElements.length; j++) {
             formElements.push(divElements[j]);
           }
         }
@@ -208,9 +217,9 @@ Copyright © HatioLab Inc. All rights reserved.
        * Submit Form. 검색 실행
        * ******
        */
-      submitMyForm: function() {
-        var evt = this.fire('things-selector-form-search', this.grid, { cancelable: true });
-        if(!evt.defaultPrevented) {
+      submitMyForm: function () {
+        var evt = this.fire("things-selector-form-search", this.grid, { cancelable: true });
+        if (!evt.defaultPrevented) {
           // 1. 초기 파라미터가 있다면 설정해준다.
           this._bindInitialParams();
           // 2. Start Spinner
@@ -225,8 +234,8 @@ Copyright © HatioLab Inc. All rights reserved.
        * ******
        * @param {Object} e 버튼 클릭 이벤트
        */
-      _onSearchFormTap: function(e) {
-        if(this.page > 1) this.page = 1;
+      _onSearchFormTap: function (e) {
+        if (this.page > 1) this.page = 1;
         else this.submitMyForm();
       },
 
@@ -236,7 +245,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * ******
        * @param {Object} event Successful response event
        */
-      _successResponseHandler: function(event) {
+      _successResponseHandler: function (event) {
         this.stopSpinner();
         this.lastResponse = event.detail.xhr.response;
         this.handleSuccessResponse(this.lastResponse);
@@ -248,15 +257,14 @@ Copyright © HatioLab Inc. All rights reserved.
        * ******
        * @param {Object} event Error response event
        */
-      _errorResponseHandler: function(event) {
+      _errorResponseHandler: function (event) {
         this.stopSpinner();
         var response = event.detail.request.xhr.response;
 
-        if(response && response.status == 401) {
+        if (response && response.status == 401) {
           this.handleUnauthorized();
-
         } else {
-          if(response) {
+          if (response) {
             this.openResponseError(response);
           } else {
             response = event.detail.request;
@@ -265,7 +273,7 @@ Copyright © HatioLab Inc. All rights reserved.
         }
 
         this.handleErrorResponse(response);
-      }
+      },
     });
   </script>
 </dom-module>
